test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/ablation_o3_r50/mutants/32/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/ablation_o3_r50/mutants/32/Solution.java:29: error: unreachable statement
        while (false) {
                      ^
1 error
